--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,8 @@
-org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
+org.gradle.jvmargs=-Xmx3072m -XX:MaxMetaspaceSize=512m -Dfile.encoding=UTF-8
 android.useAndroidX=true
 kotlin.code.style=official
 org.gradle.configuration-cache=true
+org.gradle.parallel=false
+org.gradle.daemon=false
 
 
