--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -29,8 +29,11 @@ jobs:
     - name: Build with Gradle
       run: ./gradlew assembleDebug --no-daemon
 
+    - name: Rename APK
+      run: mv app/build/outputs/apk/debug/app-debug.apk app/build/outputs/apk/debug/MyFilesplus_x25.apk
+
     - name: Upload APK
       uses: actions/upload-artifact@v4
       with:
-        name: app-debug
-        path: app/build/outputs/apk/debug/app-debug.apk
+        name: MyFilesplus_x25
+        path: app/build/outputs/apk/debug/MyFilesplus_x25.apk
