--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -3,9 +3,14 @@ name: Android Build
 on:
   push:
     branches: [ "master" ]
+    tags:
+      - 'v*'
   pull_request:
     branches: [ "master" ]
   workflow_dispatch:
+
+permissions:
+  contents: write
 
 jobs:
   build:
@@ -27,8 +32,14 @@ jobs:
     - name: Rename APK
       run: mv app/build/outputs/apk/debug/app-debug.apk app/build/outputs/apk/debug/MyFilesplus_x25.apk
 
-    - name: Upload APK
+    - name: Upload Artifact
       uses: actions/upload-artifact@v4
       with:
         name: MyFilesplus_x25
         path: app/build/outputs/apk/debug/MyFilesplus_x25.apk
+
+    - name: Upload to Release
+      uses: softprops/action-gh-release@v1
+      if: startsWith(github.ref, 'refs/tags/')
+      with:
+        files: app/build/outputs/apk/debug/MyFilesplus_x25.apk
