feat: Add Android CI/CD workflow and optimize Gradle build properties for performance.

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,18 @@
-org.gradle.jvmargs=-Xmx3072m -XX:MaxMetaspaceSize=512m -Dfile.encoding=UTF-8
+# Enable Gradle Daemon: Keep the Gradle process running in the background to avoid startup overhead on subsequent builds.
+org.gradle.daemon=true
+
+# Configure JVM Arguments: Allocate sufficient memory to the Gradle Daemon (-Xmx4g) to handle a complex Android build and prevent out-of-memory errors.
+org.gradle.jvmargs=-Xmx4g -XX:MaxMetaspaceSize=512m -Dfile.encoding=UTF-8
+
+# Enable Build Cache: Turn on Gradle's local build cache to reuse task outputs.
+org.gradle.caching=true
+
+# Enable Configuration Caching: Enable this experimental feature to speed up builds by avoiding re-computation of the task graph.
+org.gradle.configuration-cache=true
+
+# Parallel Execution: Run independent tasks in parallel
+org.gradle.parallel=true
+
+# Android X Support
 android.useAndroidX=true
 kotlin.code.style=official
-org.gradle.configuration-cache=true
-org.gradle.parallel=false
-org.gradle.daemon=false
-
-
