--- a/.github/workflows/android-ci.yml
+++ b/.github/workflows/android-ci.yml
@@ -7,6 +7,9 @@ on:
     branches: [ "master", "main" ]
   workflow_dispatch:
 
+permissions:
+  contents: write
+
 jobs:
   build-release:
     name: Build Release APK
@@ -47,6 +50,18 @@ jobs:
 
       - name: Checkout Code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0 # Required for semantic-version
+
+      - name: Calculate Next Version
+        id: version
+        uses: paulhatch/semantic-version@v5.4.0
+        with:
+          tag_prefix: "v"
+          major_pattern: "(MAJOR)"
+          minor_pattern: "(MINOR)"
+          version_format: "${major}.${minor}.${patch}"
+
 
       - name: Set up JDK 17
         uses: actions/setup-java@v4
@@ -60,11 +75,26 @@ jobs:
       - name: Build Release APK
         run: ./gradlew assembleRelease --no-daemon --stacktrace --info
 
+      - name: Rename APK
+        run: |
+          mv app/build/outputs/apk/release/app-release.apk app/build/outputs/apk/release/MyFilesplus_x25.apk
+
       - name: Upload APK Artifact
         uses: actions/upload-artifact@v4
         with:
           name: release-apk
-          path: app/build/outputs/apk/release/app-release.apk
+          path: app/build/outputs/apk/release/MyFilesplus_x25.apk
+
+      - name: Create GitHub Release
+        uses: softprops/action-gh-release@v1
+        with:
+          tag_name: v${{ steps.version.outputs.version }}
+          name: Release v${{ steps.version.outputs.version }}
+          files: app/build/outputs/apk/release/MyFilesplus_x25.apk
+          generate_release_notes: true
+          draft: false
+          prerelease: false
+
 
       - name: Post-Build Cleanup (Crucial)
         if: always() # Run even if build fails
