--- a/.github/workflows/android-ci.yml
+++ b/.github/workflows/android-ci.yml
@@ -77,7 +77,14 @@ jobs:
 
       - name: Rename APK
         run: |
-          mv app/build/outputs/apk/release/app-release.apk app/build/outputs/apk/release/MyFilesplus_x25.apk
+          echo "Listing build outputs..."
+          ls -R app/build/outputs/apk/
+          
+          # Find the generated APK (could be app-release.apk or app-release-unsigned.apk) and rename it
+          find app/build/outputs/apk/release -name "*.apk" -exec mv {} app/build/outputs/apk/release/MyFilesplus_x25.apk \;
+          
+          echo "Verifying rename:"
+          ls -l app/build/outputs/apk/release/
 
       - name: Upload APK Artifact
         uses: actions/upload-artifact@v4
