feat: Add initial AndroidManifest.xml defining application components and required permissions.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.mfp.filemanager">
 
     <!-- Permissions for File Management -->
     <!-- Required for Android 11+ to access all files -->
