--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,7 @@
 # Enable Gradle Daemon: Keep the Gradle process running in the background to avoid startup overhead on subsequent builds.
-org.gradle.daemon=true
-
-# Configure JVM Arguments: Allocate sufficient memory to the Gradle Daemon (-Xmx4g) to handle a complex Android build and prevent out-of-memory errors.
-org.gradle.jvmargs=-Xmx4g -XX:MaxMetaspaceSize=512m -Dfile.encoding=UTF-8
+org.gradle.daemon=false
+# Configure JVM Arguments: Allocate sufficient memory to the Gradle Daemon (-Xmx2g) to handle a complex Android build and prevent out-of-memory errors.
+org.gradle.jvmargs=-Xmx2g -XX:MaxMetaspaceSize=512m -Dfile.encoding=UTF-8
 
 # Enable Build Cache: Turn on Gradle's local build cache to reuse task outputs.
 org.gradle.caching=true
